--- a/src/quizCreation/templates/element_forms/analytics_script_form.html
+++ b/src/quizCreation/templates/element_forms/analytics_script_form.html
@@ -7,6 +7,8 @@ hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
 
 >
 
+<h4>Analytics scripts</h4>
+
 {% if added %}
 <p class="text-center">
 
@@ -25,6 +27,6 @@ hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
  id="analytics_script" cols="30" rows="10" maxlength="9000" required></textarea>
 </label>
 
-<button type="submit" class="btn btn-primary site-button">Save analytics scripts</button>
+<button type="submit" class="btn btn-primary site-button w-100">Save analytics scripts</button>
 {% endif %}
 </form>
