--- a/src/templates/dashboard2/includes/header.html
+++ b/src/templates/dashboard2/includes/header.html
@@ -238,7 +238,11 @@
                             Create quiz
                         </button>
                     </div>
-
+                    
+                    <li class="text-center"><a class="nav-link" href="{% url 'privpolicy' %}"> Privacy Policy</a></li>
+                    <li class="text-center"><a class="nav-link" href="{% url 'tandc' %}"> Terms and Conditions</a></li>
+    
+    
                     <div class="footer px-2">
                         <nav class="navbar navbar-expand d-none d-sm-block">
                             <div class="collapse navbar-collapse justify-content-center text-center">
@@ -250,10 +254,6 @@
                     
                                     {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'deliveryinfo' %}"> Delivery Info</li></a> {% endcomment %}
                                     {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'refundpolicy' %}"> Refund and Returns</a></li> {% endcomment %}
-                                    <li class="nav-item"><a class="nav-link" href="{% url 'privpolicy' %}"> Privacy Policy</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="{% url 'tandc' %}"> Terms and Conditions</a></li>
-                    
-                    
                     
                                 </ul>
                             </div>
