--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -78,21 +78,16 @@
                                    <form action="
                                    ">
                                    <label for="" class="my-1">
-                                        Copy and paste any analytics scripts (javascript) here (e.g. Facebook pixel or Google analytics)
+                                        Copy and paste any analytics scripts (javascript) here (e.g. Facebook pixel or Google analytics). Remember to include &#x3C;script&#x3E; tags.
                                     <textarea name="analytics_script" class="form-control border-dark"
                                     
                                     id="analytics_script" cols="30" rows="10" maxleg></textarea>
                                 </label>
                                 </form>
-                                    <div class="form-group">
-                                        <label class="text-black font-w600">Enter a name for your quiz page<span class="required">*</span></label>
-                                        <input type="text" class="form-control" name="name" required maxlength='300' placeholder="Enter name here">
-                                        Note: Name is only shown to you and not displayed to users
-                                    </div>
+                                 
 
                                     <div class="text-center">
-                                        <button type="button" class="btn btn-danger light" data-dismiss="modal">Cancel</button>
-                                        <button type="submit" class="btn btn-primary site-button">Continue</button>
+                                        <button type="button" class="btn btn-danger light" data-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
