--- a/src/quizCreation/templates/element_forms/AddChoiceMultipleChoiceModal.html
+++ b/src/quizCreation/templates/element_forms/AddChoiceMultipleChoiceModal.html
@@ -67,7 +67,7 @@
             {% endif %}
             
             >
-            Save changes
+            Finished changing
         
         </a>
         </div>
