--- a/src/quizData/templates/quizData/response_table.html
+++ b/src/quizData/templates/quizData/response_table.html
@@ -76,13 +76,13 @@
                     </a>
                 
                 </td>
-                <td>
+                <td class="text-danger">
                     <a type="button" 
                     hx-delete="{% url 'delete_response' r.quiz.id r.response_id %}"
                     hx-confirm="Are you sure you want to delete response with id: {{r.response_id}}"
                     hx-target="#table"
                     >
-                        Delete <i class="fa fa-trash text-red"></i>
+                        Delete <i class="fa fa-trash"></i>
                     </a>
                     
         
@@ -94,7 +94,7 @@
         
     </table> 
 
-    <a type="button" class="float-right btn btn-primary my-4" 
+    <a type="button" class="float-right btn btn-primary site-button my-4" 
     target="_blank" href="{% url 'download_csv_of_responses' quiz.id %}"> 
     Download all responses as CSV <i class="fa fa-download"></i></a>
 
