--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -73,18 +73,11 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                   {% include 'element_forms/logo_upload_form.html' %}
+                                   {% include 'quiz_settings/logo_upload_form.html' %}
+                                   {% include 'quiz_settings/analytics_script_form.html' %}
 
-                                   <form action="
-                                   ">
-                                   <label for="" class="my-1">
-                                        Copy and paste any analytics scripts (javascript) here (e.g. Facebook pixel or Google analytics). Remember to include &#x3C;script&#x3E; tags.
-                                    <textarea name="analytics_script" class="form-control border-dark"
-                                    
-                                    id="analytics_script" cols="30" rows="10" maxleg></textarea>
-                                </label>
-                                </form>
-                                 
+                                   
+                                
 
                                     <div class="text-center">
                                         <button type="button" class="btn btn-danger light" data-dismiss="modal">Close</button>
@@ -106,12 +99,12 @@
                                     hx-get={% url 'move_page_up' user_quiz.id page.id %}
                                     hx-target='#pagesList'
                                     hx-swap=outerHTML
-                                    class="fs-24 text-dark mb-0 mt-2"><i class="fa fa-chevron-up"></i></p>
+                                    class="site-color fs-20 mb-0 mt-2"><i class="fa fa-chevron-up"></i></p>
                                 <p type="button"
                                     hx-get={% url 'move_page_down' user_quiz.id page.id %}
                                     hx-target='#pagesList'
                                     hx-swap=outerHTML       
-                                    class="fs-24 text-dark mb-0 mt-2"><i class="fa fa-chevron-down"></i></p>
+                                    class="site-color fs-20 mb-0 mt-2"><i class="fa fa-chevron-down"></i></p>
 
                               
                                 </div>
@@ -120,19 +113,19 @@
                                     {% comment %} <p>This page will always be shown as it has no conditions attached</p> {% endcomment %}
                                 </div>
                             </div>
-                            <div class="ml-auto mr-4 pr-1">
+                            <div class="ml-auto pr-4">
 
-                            <a class="d-block " href="{% url 'quiz_page_edit' user_quiz.id page.id %}">
-                                <div class="float-right fs-24 text-dark">Edit <i class="fa fa-edit"></i></div>
+                            <a class=" btn btn-primary site-button mb-2" href="{% url 'quiz_page_edit' user_quiz.id page.id %}">
+                                <span >Edit <i class="fa fa-edit"></i></span>
                             </a>
                             
-                            <a href="#" class="d-block "
+                            <a href="#" class="mt-3"
                             hx-delete={% url 'delete_quiz_page' user_quiz.id page.id %}
                             hx-target='#pagesList'
                             hx-swap=outerHTML
                             hx-confirm="Are you sure you wish to delete the page {{page.name}}"
                             >
-                            <div class="float-right fs-24 text-dark">Delete <i class="fa fa-trash"></i></div>
+                            <div class="  text-danger text-right" style="border:3px  solid transparent!important;"> Delete <i class="fa fa-trash"></i></div>
                             </div>
                             
                         </a>
