--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -1,5 +1,5 @@
 <div id="page_elements">
-    {% if elements_count > 2 %}
+    {% if elements_count > 1 %}
     <div class="row px-5">
         <div class="mx-auto w-100 border border-dark p-4 text-center"  style="border-style:dashed !important">
                 <div class="">
@@ -22,9 +22,11 @@
         </i> 
         
         <div class="mx-auto w-100 border border-dark p-2"  style="border-style:dashed !important">
-            <a type="button" class="" data-toggle="modal" data-target="#editModal_{{element.element.id}}">
+            <a type="button" class="btn btn-primary site-button float-right text-right" data-toggle="modal" data-target="#editModal_{{element.element.id}}">
 
-                <span type="button" class="float-right ml-auto fs-24 text-dark mb-0 mt-2 align-items-center">Edit <i class="fa fa-edit"></i></span>
+                <span type="button" class="">
+                    Edit <i class="fa fa-edit"></i>
+                </span>
             </a>
 
             <div class="modal fade" id="editModal_{{element.element.id}}">
@@ -75,7 +77,7 @@
                                  {% endif %}
                                 type="submit" 
                                 
-                                class="btn btn-primary site-button">Save changes</button>
+                                class="btn btn-primary site-button">Finished changing</button>
                             </div>
 
                         </form>
@@ -91,12 +93,12 @@
                         hx-get={% url 'move_element_up' user_quiz.id quiz_page.id element.element.page_element.id %}
                         hx-target='#page_elements'
                         hx-swap=outerHTML
-                        class="fs-24 text-dark mb-0 mt-2"><i class="fa fa-chevron-up"></i></p>
+                        class="fs-20 site-color mb-0 mt-2"><i class="fa fa-chevron-up"></i></p>
                     <p type="button"
                         hx-get={% url 'move_element_down' user_quiz.id quiz_page.id element.element.page_element.id %}
                         hx-target='#page_elements'
                         hx-swap=outerHTML       
-                        class="fs-24 text-dark mb-0 mt-2"><i class="fa fa-chevron-down"></i></p>
+                        class="fs-20 site-color mb-0 mt-2"><i class="fa fa-chevron-down"></i></p>
                 </div>
 
                 <br>
@@ -107,19 +109,26 @@
                 {% endautoescape %}
                 <div>
                     {% if element.type == 'Text input element' or  element.type == 'Char input element' or  element.type == 'Email input element' or element.type == 'Number input element' or element.type == 'Multiple choice question' %}
-                    <i>Question title:</i> <b>{{element.element.title}}</b>
+                    Question title:      
+                    <ul class="list-group list-group-horizontal-sm">
+                        <li class="list-group-item">
+                            <strong>{{element.element.title}}</strong>
+                        </li>
+                    </ul>
                     {% endif %}
 
 
                     {% if element.type == 'Multiple choice question'  %}
-                    <br> <br>
                     Question choices: 
                     <br>
 
                     <ul class="list-group list-group-horizontal-sm">
                         {% for e in element.element.get_multiple_choice_choices %}
                         <li class="list-group-item">
-                            {{e.choice}}
+                            <strong>
+
+                                {{e.choice}}
+                            </strong>
                         </li >
                         <li>
                             {% endfor %}
@@ -130,7 +139,10 @@
                 </div>
                 
             </div>
-            <span type="button" hx-confirm="Are you sure you want to delete this {{element.type}}?" hx-target='#page_elements' hx-delete={% url 'delete_page_element' user_quiz.id quiz_page.id element.element.page_element.id %} class="float-right ml-auto d-flex fs-24 text-dark mb-0 mt-2">Delete <i class="mdi mdi-close"></i></span>
+            <span type="button" hx-confirm="Are you sure you want to delete this {{element.type}}?" 
+            hx-target='#page_elements' 
+            hx-delete={% url 'delete_page_element' user_quiz.id quiz_page.id element.element.page_element.id %} 
+            class="float-right text-danger" style="border:3px  solid transparent!important;">Delete <i class="fa fa-trash"></i></span>
         </div>
     </div>
     {% endfor %}
