--- a/src/quizData/templates/quizData/response_details.html
+++ b/src/quizData/templates/quizData/response_details.html
@@ -9,13 +9,13 @@
 <div class="row">
 
 
-<a type="button"  href="{% url 'view_quiz_results' quiz.id %}">< Back</a>
+<a class="no-print" type="button"  href="{% url 'view_quiz_results' quiz.id %}">< Back</a>
     <div class="col-xl-12 col-lg-12">
 
         <div class="card">
             <div class="card-header border-0 pb-0">
                 <h4 class="card-title">Response details</h4>
-                <a class="btn btn-primary float-right my-2 no-print" type="button" onclick="window.print()">Print <i class="fa fa-print"></i></a>
+                <a class="btn btn-primary site-button float-right my-3 no-print" type="button" onclick="window.print()">Print <i class="fa fa-print"></i></a>
             </div>
             <div class="card-body pb-0">
                 <div class="widget-media">
