--- a/src/templates/dashboard2/includes/header.html
+++ b/src/templates/dashboard2/includes/header.html
@@ -208,7 +208,7 @@
             <!--**********************************
             Sidebar start
         ***********************************-->
-            <div class="deznav">
+            <div class="deznav no-print">
                 <div class="deznav-scroll">
                     <ul class="metismenu" id="menu">
 
@@ -244,9 +244,9 @@
 
                     </ul>
                     <div class="text-center">
-                        <button class="btn btn-primary site-button mx-auto justify-content-center">
+                        <a href="{% url 'create_quiz' %}" type="button" class="btn btn-primary site-button mx-auto justify-content-center">
                             Create quiz
-                        </button>
+                        </a>
                     </div>
                     
                     <li class="text-center"><a class="nav-link" href="{% url 'privpolicy' %}"> Privacy Policy</a></li>
