--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -4,10 +4,15 @@
         <div class="mx-auto w-100 border border-dark border-1 p-4 text-center"  style="border-style:dashed !important">
                 <div class="">
                     <button type="button" class="btn btn-primary site-button mb-2" 
-                    data-toggle="modal" data-target="#exampleModalCenter">
+                    data-toggle="modal" data-target="#exampleModalCenter"
+                    hx-target="#modalContent"
+                    hx-swap=outerHTML
+                    hx-get="{% url 'all_element_swatches' user_quiz.id quiz_page.id  %}"
+                    
+                    >
                         Select an element to add
                         <i class="fa fa-plus"></i>        
-                    </button>
+                    </button> 
                 </div>
         </div>
     </div>
@@ -46,7 +51,7 @@
                         hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
                         hx-post="{% url 'edit_element_title' element.element.page_element.page.quiz.id element.element.page_element.page.id element.element.page_element.id %}"
                         
-                        {% if element.type == "Multiple choice question" %}
+                        {% if element.type == "Multiple choice question" or  element.type == 'Single choice question' %}
                         hx-target="#editModalContent{{element.element.id}}"
                         {% else %}
                         hx-target="#page_elements"
@@ -76,7 +81,7 @@
                                 <a type="button" class="btn btn-danger light" data-dismiss="modal">Cancel</a>
                                 <button                        
                                 
-                                {% if not element.type == "Multiple choice question" %}
+                                {% if not element.type == "Multiple choice question" and not element.type == "Single choice question" %}
 
                                 onclick="document.querySelector('#editModal_{{element.element.id}} > div:nth-child(1) > div:nth-child(1) > div:nth-child(1) > button:nth-child(2)').click()"
                                  {% endif %}
@@ -114,7 +119,7 @@
                 {% endautoescape %}
                 <div>
                     <br><br>
-                    {% if element.type == 'Text input element' or  element.type == 'Char input element' or  element.type == 'Email input element' or element.type == 'Number input element' or element.type == 'Multiple choice question' %}
+                    {% if element.type == 'Text input element' or  element.type == 'Char input element' or  element.type == 'Email input element' or element.type == 'Number input element' or element.type == 'Multiple choice question' or element.type == "Single choice question" %}
                     Question title:      
                     <ul class="list-group list-group-horizontal-sm">
                         <li class="list-group-item">
@@ -124,7 +129,7 @@
                     {% endif %}
 
 
-                    {% if element.type == 'Multiple choice question'  %}
+                    {% if element.type == 'Multiple choice question' %}
                     Question choices: 
                     <br>
 
@@ -140,7 +145,26 @@
                             {% endfor %}
                         </li>
                     </ul>
+
+                    {% elif element.type == "Single choice question" %}
+                    Question choices: 
+                    <br>
+
+                    <ul class="list-group list-group-horizontal-sm">
+                        {% for e in element.element.get_single_choice_choices %}
+                        <li class="list-group-item">
+                            <strong>
+
+                                {{e.choice}}
+                            </strong>
+                        </li >
+                        <li>
+                            {% endfor %}
+                        </li>
+                    </ul>
+
                     {% endif %}
+
 
                 </div>
                 
