attempt to allow edit text content

--- a/src/quizCreation/templates/element_choices.html
+++ b/src/quizCreation/templates/element_choices.html
@@ -25,6 +25,8 @@
             class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=CharInput style="min-width:8rem;border:3px solid white;">
             <div class="text-center py-4">
                 <h4 class="card-title">Character input</h4>
+                <p class="text-small">Useful to get short text information from users</p>
+
                     <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
             </div>
         </div>
@@ -33,6 +35,8 @@
             class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=TextInput style="min-width:8rem;border:3px solid white;">
             <div class="text-center py-4">
                 <h4 class="card-title">Text input</h4>
+                <p class="text-small">Useful to get long text information from users</p>
+
                     <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
             </div>
         </div>
@@ -41,6 +45,8 @@
             class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=EmailInput style="min-width:8rem;border:3px solid white;">
             <div class="text-center py-4">
                 <h4 class="card-title">Email input</h4>
+                <p class="text-small">Capture email addresses easily with this element</p>
+
                     <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
             </div>
         </div>
@@ -50,6 +56,8 @@
             class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=NumberInput style="min-width:8rem;border:3px solid white;">
             <div class="text-center py-4">
                 <h4 class="card-title">Number input</h4>
+                <p class="text-small">A simple number input field</p>
+
                     <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
             </div>
         </div>    
@@ -58,6 +66,8 @@
             class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=MultipleChoice style="min-width:8rem;border:3px solid white;">
             <div class="text-center py-4">
                 <h4 class="card-title">Multiple Choice</h4>
+                <p class="text-small">Swatches for multiple choice questions</p>
+
                     <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
             </div>
         </div>  
@@ -67,6 +77,9 @@
         class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=SingleChoice style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-4">
             <h4 class="card-title">Single Choice</h4>
+            <p class="text-small">Swatches where there is only a single choice</p>
+
+
                 <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
         </div>
     </div>  
