--- a/src/quizCreation/templates/element_forms/text.html
+++ b/src/quizCreation/templates/element_forms/text.html
@@ -30,6 +30,8 @@
         hx-get={% url 'all_element_swatches' user_quiz.id quiz_page.id %} hx-trigger=click
         hx-target='#modalContent' hx-swap=outerHTML 
         {% else %}
+        hx-get={% url 'all_element_swatches' user_quiz.id quiz_page.id %} hx-trigger=click
+        hx-target='#modalContent' hx-swap=outerHTML 
         data-dismiss="modal"
         {% endif %}
         class="btn btn-danger light" 
